# Trip-Ledger-AI

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
.agent/skills/category-classifier/: SKILL.md
.agent/skills/category-classifier/scripts/: classify.py
.agent/skills/geocoder/: SKILL.md
.agent/skills/geocoder/scripts/: geocode.py
.agent/skills/invoice-extractor/: SKILL.md
.agent/skills/invoice-extractor/examples/: sample_output.json
.agent/skills/invoice-extractor/scripts/: extract.py
.agent/workflows/: export-report.md  process-invoices.md  run-app.md
data/: categories.json
src/: __init__.py  app.py  config.py
src/etl/: __init__.py  cache.py  exporter.py  models.py  storage.py
src/extractors/: __init__.py  category_classifier.py  client.py  gemini_client.py  image_preprocessor.py  invoice_parser.py
src/geo/: __init__.py  geocoder.py
src/pages/: 1_receipts.py  1_upload.py  2_timeline.py  3_analysis.py  4_map.py  5_settings.py  __init__.py
src/ui/: sidebar.py
src/utils/: session.py
src/visualization/: __init__.py  charts.py  maps.py  timeline.py
